--- a/plantersinf/planner/templates/planner/date.html
+++ b/plantersinf/planner/templates/planner/date.html
@@ -478,7 +478,7 @@
 			
 		</div><!--clock-->
 
-		<div class="container">
+		<div class="container" id="stopwatchcontainer">
 			<table class="table table-hover">
 			  <thead class="thead-dark">
 				<tr>
@@ -501,10 +501,13 @@
 			  id="stopwatch_{{activity.id}}"
 			  -->
 					  
-					  
+			    	
 				  <tr class="date_row" id='{{activity.id}}'>
 						  
-						  <th scope="row"><a class="text-danger remove" href='/remove/{{date.id}}/{{activity.id}}' id='remove_{{activity.id}}'>&times;</a></th>
+						  <th scope="row">
+							<a class="btn btn-sm btn-info snooze" href="#" style="display: none;" id="snooze_{{activity.id}}">Snooze</div>  
+							<a class="text-danger remove" href='/remove/{{date.id}}/{{activity.id}}' id='remove_{{activity.id}}'>&times;</a>
+						  </th>
 						  <td>
 						  <a class="edit-activity" href='/edit/{{activity.id}}/{{date.id}}' id='go_{{activity.id}}'>{{activity.name}}</a>
 						   
@@ -552,10 +555,6 @@
 		  </div>
 	</div>
 	
-    
-	<div class="snooze">
-		<div class="btn btn-lg btn-info" style="display: none;" id="snoozebtn">Snooze</div>
-	</div>
 	
   
 
