task list added to each activity
-The option to add multiple individual tasks to each activity is now available
-bug fix regarding editing activities using the apply to all button

--- a/plantersinf/planner/templates/planner/datelist.html
+++ b/plantersinf/planner/templates/planner/datelist.html
@@ -43,7 +43,7 @@
     {%for year,yearobj in eachyear.items%}
     {%for month,monthobj in yearobj.items%}
     
-    {%if monthobj.eachweek.exists%}
+    {%if monthobj.eachweek%}
       {%if month == activemonth and year == activeyear%}
     <div class="container month pb-3 pt-3 border active" id="{{month}}-{{year}}"style="display: none; min-width: 768px;">
       {%else%}
@@ -86,7 +86,7 @@
           for daynum in monthobj.length
           -->
       
-        {%for weeknumber,weekdates in monthobj.eachweek.items%}
+        {%for weeknumber,weekdates in monthobj.eachweek%}
         {%if weeknumber != "exists"%}
         <div class="row week_{{weeknumber}} p-0 border-top border-bottom">
           {%if weekdates%}
@@ -96,7 +96,7 @@
               {%for date in weekdates%}    
               {%if date.weekday == "sun"%}
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
-              <ul class="list-group">
+              <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
                 <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
                 {%endfor%}
@@ -111,7 +111,7 @@
               {%for date in weekdates%}    
               {%if date.weekday == "mon"%}
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
-              <ul class="list-group">
+              <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
                 <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
                 {%endfor%}
@@ -126,7 +126,7 @@
               {%for date in weekdates%}    
               {%if date.weekday == "tue"%}
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
-              <ul class="list-group">
+              <ul class="list-group" id='{{date.id}}'>
               {%for act in date.recurring.all%}
               <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
               {%endfor%}
@@ -141,7 +141,7 @@
               {%for date in weekdates%}    
               {%if date.weekday == "wed"%}
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
-              <ul class="list-group">
+              <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
                 <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
                 {%endfor%}
@@ -156,7 +156,7 @@
               {%for date in weekdates%}    
               {%if date.weekday == "thu"%}
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
-              <ul class="list-group">
+              <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
                 <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
                 {%endfor%}
@@ -171,7 +171,7 @@
               {%for date in weekdates%}    
               {%if date.weekday == "fri"%}
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
-              <ul class="list-group">
+              <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
                 <li  class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
                 {%endfor%}
@@ -186,7 +186,7 @@
               {%for date in weekdates%}    
               {%if date.weekday == "sat"%}
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
-              <ul class="list-group">
+              <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
                 <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
                 {%endfor%}
