--- a/plantersinf/planner/templates/planner/date.html
+++ b/plantersinf/planner/templates/planner/date.html
@@ -477,6 +477,70 @@
 			
 			
 		</div><!--clock-->
+	</div>
+	<div class="d-flex">
+		<div class="container border" id="agendacontainer">
+			TODO LIST
+			{%for each in agendas%}
+			{{each.name}}
+			{%endfor%}
+			<form action="/date/{{date.id}}" method="post" id="agendaform">
+				{% csrf_token %}
+			<div class="container" style="width:250px" id="agendainputs">
+				<input type="text" class="text form-control" name="agendaentry" value="" id="agendaentry" placeholder="todo">
+				<input type="hidden" name="remove" value="0" id="removeagenda">
+				<input type="hidden" name="add" value="0" id="addagenda">
+				<input type="hidden" name="alter" value="0" id="alteragenda">
+				<input type="hidden" name="checked" value="0" id="checkedagenda">
+			</div>
+			{%for activity in activities%}
+			<div class="container">
+				<div class="d-flex">
+					{{activity.name}}
+					
+					<a href="/agenda/{{date.id}}/{{activity.id}}/addto{{activity.name}}"class="btn btn-sm btn-success" id="agenda_{{activity.id}}">+</a>
+				</div>
+				
+				{%for name,tasks in allagendas%}
+				{%if name == activity.name%}
+
+				<ul class="list-group" id="{{activity.name}}">
+					{%for task,active in tasks%}
+					<div class="d-flex agenda-item p-1" id="{{activity.name}}_{{task}}">
+						<a class="text-danger btn btn-small formhref" href='/agenda/{{date.id}}/{{activity.id}}/{{task}}' id='remove'>&times;</a>
+						{%if active == "0"%}
+						<li class="list-group-item task btn btn-sm" id="{{name}}_{{task}}_item" style="min-width: max-content;"><p class="task p-0 m-0" style="font-size: small; width: 150px; min-width: max-content;">{{task}}</p></li>
+						{%else%}
+						<li class="list-group-item task btn btn-sm btn-primary active" id="{{name}}_{{task}}_item" style="min-width: max-content;"><p class="task p-0 m-0" style="font-size: small; width: 150px; min-width: max-content;">{{task}}</p></li>
+						<input type="hidden" name="{{name}}" value="{{task}}" id="checked_{{name}}_{{task}}">
+						{%endif%}
+						<div class="d-flex flex-column justify-content-around">
+							<div class="direction" id="up">
+								<svg class="direction" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+									<path class="direction" fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+								</svg>
+							</div>
+							<div class="direction" id="down">
+								<svg class="direction" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+									<path class="direction" fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+								</svg>
+							</div>
+							
+							
+						</div>
+					</div>
+					{%endfor%}
+
+				</ul>	
+				
+				{%endif%}
+				
+				{%endfor%}
+			</div>
+			{%endfor%}
+			</form>
+
+		</div>
 
 		<div class="container" id="stopwatchcontainer">
 			<table class="table table-hover">
