--- a/plantersinf/planner/templates/planner/date.html
+++ b/plantersinf/planner/templates/planner/date.html
@@ -477,7 +477,9 @@
 			
 			
 		</div><!--clock-->
+		
 		<div class="container" id="stopwatchcontainer">
+			
 			<table class="table table-hover">
 			  <thead class="thead-dark">
 				<tr>
@@ -486,7 +488,21 @@
 				  <th scope="col" style="width: 15%">Target Time (hr:min:sec)</th>
 				  <th scope="col" style="width: 15%">Current Time</th>
 				  <th scope="col" style="width: 15%">Control</th>
-				  <th scope="col" style="width: 10%"></th>
+				  <th scope="col" style="width: 10%">
+					<div class="container" id="editSnooze" data-snoozetime="">
+						<p>snooze: <span id="paragraphSnooze">10</span> minutes</p>
+						<!--<form action="/editSnooze/{{date.id}}" method="post" id="editSnoozeForm">-->
+							<!--{% csrf_token %}-->
+							<div class="d-flex">
+								
+								<input id="timeSnooze" type="text" style="width: 95px;" placeholder="snooze time">
+								<button class="btn btn-info btn-sm" id="applySnooze">apply</button>
+							</div>
+								
+							
+						<!--</form>-->
+					</div>
+					</th>
 				  
 				</tr>
 			  </thead>
